--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
 <div class="main-content">
     {{>header}}
     <p>This site was created by Martin Gratt. It uses data from mapbox.com and weatherstack.com!</p>
-    <img class="portrait" src="/../img/me.jpg">
+    <img class="portrait" src="/../img/picture.jpg">
 </div>
 
 {{>footer}}
