--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    border: #888888 solid 1px;
 }
 .main-content {
     flex-grow: 1;
